<resources>
    <string name="app_name">GoSkate</string>
    <string name="title_activity_go_skate_map">Map</string>
    <string name="shop_name">SHOP</string>


    // LOGIN


    // REGISTRO
    <string name="date">FECHA NACIMIENTO</string>


    <string name="home_name">HOME</string>
    <string name="email_login">EMAIL</string>
    <string name="passsword_login">CONTRASEÑA</string>
    <string name="name_register">NOMBRE</string>
    <string name="confirm_password_r">COMFIRMAR CONTRASEÑA</string>
    <string name="age_register">FECHA NACIMIENTO</string>
    <string name="men_radio_group">HOMBRE</string>
    <string name="women_register">MUJER</string>

    //CONTENT

    //MAP

    <string name="map_name">MAP</string>
    <string name="email_valid">POR FAVOR INGRESAR EMAIL</string>
    <string name="info_valid">POR FAVOR INGRESAR INFORMACION</string>
    <string name="not_acount">¿AUN NO TIENES UNA CUENTA?</string>
    <string name="logo_off">CERRAR SESION</string>
    <string name="notification">NOTIFICACIONES</string>
    <string name="title_activity_maps_go_skate">Map</string>
    <string name="add_picture">AGREGAR FOTOS</string>
    <string name="descriptions">DESCRIPCIONES</string>
    <string name="add_value">AGREGAR PUNTUACION</string>
    <string name="public_spot">PUBLICAR</string>
    <string name="address">DIRECCION</string>
    <string name="timetable">HORARIOS</string>
    <string name="add_place_ubication">AGREGAR UBICACION</string>
    <string name="add_description">Agrega tus comentarios</string>
    <string name="likes">Me gusta</string>
    <string name="photo_profile">Selecciona una foto de perfil</string>
    <string name="description__comments_spot">DESCRIPCIONES</string>

    //NAME FRAGMENT

    <string name="notifiy">NOTIFICACIONES</string>
    <string name="message">MENSAJES</string>
    <string name="new_message">Busca a tus amigos</string>
    <string name="init_new_chat">INICIAR CONVERSACION</string>
    <string name="name_spot_title">NOMBRE DEL SPOT</string>
    <string name="hint_name_spot">"Escribe el nombre del spot "</string>
    <string name="add">AGREGAR</string>
    <string name="cancel">CANCELAR</string>

    <string-array name="categories_array">
        <item>STREET</item>
        <item>SKATE PARK</item>
        <item>VERTICAL</item>
    </string-array>

    <string-array name="hour_am_array">
        <item>05:00am</item>
        <item>06:00am</item>
        <item>07:00am</item>
        <item>08:00am</item>
        <item>09:00am</item>
        <item>SIN HORARIO</item>
    </string-array>

    <string-array name="hour_pm_array">
        <item>05:00pm</item>
        <item>06:00pm</item>
        <item>07:00pm</item>
        <item>SIN HORARIO</item>
    </string-array>

    <string-array name="days_array">
        <item>DIA PAR SKATE</item>
        <item>DIA IMPAR SKATE</item>
        <item>TODOS LOS DIAS</item>
        <item>PRIVADO</item>
        <item>OTRO</item>
    </string-array>

    <string-array name="fragment_titles">
        <item>@string/notifiy</item>
        <item>@string/message</item>
    </string-array>

</resources>
