<?xml version="1.0" encoding="utf-8"?>

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/fondosiluetas">

        <ImageView
            android:id="@+id/logoImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:contentDescription="@string/email_login"
            app:layout_constraintBottom_toTopOf="@id/emailEditText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/loglgin" />

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="290dp"
            android:layout_height="45dp"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="50dp"
            android:drawableStart="@drawable/ic_action_email"
            android:drawableLeft="@drawable/ic_action_email"
            android:gravity="center_vertical"
            android:hint="@string/email_login"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:textColorHint="@color/cardview_shadow_start_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logoImageView" />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="290dp"
            android:layout_height="45dp"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="50dp"
            android:drawableStart="@drawable/ic_action_password"
            android:drawableLeft="@drawable/ic_action_password"
            android:gravity="center_vertical"
            android:hint="@string/passsword_login"
            android:inputType="textPassword"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:textColorHint="@color/cardview_shadow_start_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/emailEditText" />


        <Button
            android:id="@+id/googleButton"
            android:layout_width="180dp"
            android:layout_height="60dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/common_google_signin_btn_icon_dark_normal"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordEditText" />

        <TextView
            android:id="@+id/login_whit_google"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="INGRESAR CON GOOGLE"
            app:layout_constraintBottom_toTopOf="@id/loginBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/googleButton"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="163dp"
            android:layout_height="61dp"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_whit_google" />

        <TextView
            android:id="@+id/noAccountTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:text="@string/not_acount"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/loginBtn" />
    </androidx.constraintlayout.widget.ConstraintLayout>